--- a/src/static/style.css
+++ b/src/static/style.css
@@ -6,9 +6,9 @@
   width: 100%;
 }
 
-.picture {
-  border: 3px solid black;
-}
+/*.picture {*/
+  /*border: 3px solid black;*/
+/*}*/
 
 .sobel {
   border: 3px solid black;
